tests/errors/error_display/test_hll_defer_mutability.err.expected
error: at 4:19: [HMC-AssignToImmutable] In function 'f': cannot assign to immutable binding 'x'
   |
 4 |             defer x = 2;
   |                   ^
